--- a/public/index.html
+++ b/public/index.html
@@ -33,28 +33,67 @@
     <!-- App CSS -->
     <link rel="stylesheet" href="/styles/layout.css" type="text/css" />
     <link rel="stylesheet" href="/styles/nav.css" type="text/css" />
+    <link rel="stylesheet" href="/styles/header.css" type="text/css" />
+    <link rel="stylesheet" href="/styles/new-tweet.css" type="text/css" />
 
 
-    <!-- External JS -->
+
+      <!-- External JS -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
  
     <!-- App JS -->
     <script type="text/javascript" src="/scripts/client.js"></script>
+
+    <script src="./composer-char-counter.js"></script>
   </head>
 
   <body>
     <!-- Top nav bar (fixed) -->
-
-    <nav class="navi">
-        <span>tweeter</span>
-        <div>
-            <button id="nav-menu-button" type="button">
-                <p><strong>send a new tweet</strong>send tweet</p>
-            </button>
+    <nav>
+    <div class="nav">
+        <div class="logo">
+          <span>tweeter</span>
         </div>
-    </nav>
+        <div class="createNewTweet">
+            <p><strong>Write</strong> a new tweet</p>
+        </div>
+    </div>
+  </nav>
+
+  <div class="userbox">
+    <h2>inside userbox</h2>
+
+    <header>
+      <div class="user">
+          <img src="/images/profile-hex.png"> 
+      </div>
+      <br>
+      <div>
+          <h2>Your Name</h2>
+      </div>
+  </header>
+  </div>
+
+
+
 
     <!-- Page-specific (main) content here -->
-    <main class="container"></main>
+    <main class="container">
+      <div>
+        <h2>inside main container</h2>
+        <section class="new-tweet">
+          <h2>Compose Tweet</h2>
+      
+          <form method="POST" action="/tweets">
+            <label for="tweet-text">What are you humming about?</label>
+            <textarea name="text" id="tweet-text"></textarea>
+            <div>
+              <button type="submit">Tweet</button>
+              <output name="counter" class="counter" for="tweet-text">140</output>
+            </div>
+          </form>
+        </section>
+      </div>
+    </main>
   </body>
 </html>
