updates to json packages and dependencies

--- a/public/index.html
+++ b/public/index.html
@@ -80,9 +80,8 @@
           <h2>Compose Tweet</h2>
             <div class="tweetBox">
                 <form method="POST" action="/tweets">
-                    <label for="tweet-text">What are you humming about?</label>
                     <div class="tweetTextArea">
-                        <textarea name="text" id="tweet-text"></textarea>
+                        <textarea name="text" id="tweet-text" placeholder="what's happening?"></textarea>
                     </div>
                     <div class="tweetButtonAndCounter">
                         <button type="submit">Tweet</button>
