--- a/public/index.html
+++ b/public/index.html
@@ -54,7 +54,7 @@
     <nav>
         <div class="nav">
             <div class="logo">
-                <span>twaater</span>
+                <span>tweeter</span>
             </div>
             <div class="createNewTweet">
                 <p><strong>Write</strong> a new tweet</p>
@@ -67,7 +67,7 @@
         <header>
             <div class="user">
                 <img src="/images/profile-hex.png">
-                <h4>Jior Name</h4>
+                <h4>your name</h4>
             </div>
         </header>
     </div>
