improves notes, fixes alert issue with 140chars max limit, removes opacity effect of tweets hovering over nav, fixes tweets being resubmitted to db each time after new submission

--- a/public/index.html
+++ b/public/index.html
@@ -85,7 +85,7 @@
             <h2></h2>
             <div class="tweetBox">
                 <div id="message-too-long-alert">
-                    message too long
+                    nope
                 </div>
                 <form class="tweet-box-form" method="POST" action="/tweets">
                     <div class="tweetTextArea">
