fixed styling to make content more readable

--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,10 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:ital,wght@1,700&display=swap" rel="stylesheet">
 
+    <!-- Bungee Hairline-->
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Bungee+Hairline&display=swap" rel="stylesheet">
+
     <!-- Source Sans Pro Italic 300 -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:ital,wght@1,300&display=swap" rel="stylesheet">
@@ -92,7 +96,7 @@
                         <textarea name="text" id="tweet-text" placeholder="what are you humming about"></textarea> 
                     </div>
                     <div class="tweetButtonAndCounter">
-                        <button type="submit">Tweet</button>
+                        <button id="btn" type="submit">Tweet</button>
                         <output name="counter" class="counter" for="tweet-text">140</output>
                     </div>
                 </form>
